@@ -18,13 +18,16 @@ package stroom.query.language;
 
 import stroom.docref.DocRef;
 import stroom.query.api.v2.Column;
+import stroom.query.api.v2.ExpressionItem;
 import stroom.query.api.v2.ExpressionOperator;
 import stroom.query.api.v2.ExpressionOperator.Op;
 import stroom.query.api.v2.ExpressionTerm;
 import stroom.query.api.v2.ExpressionTerm.Condition;
-import stroom.query.api.v2.Filter;
+import stroom.query.api.v2.ExpressionUtil;
 import stroom.query.api.v2.HoppingWindow;
+import stroom.query.api.v2.IncludeExcludeFilter;
 import stroom.query.api.v2.ParamSubstituteUtil;
+import stroom.query.api.v2.ParamUtil;
 import stroom.query.api.v2.Query;
 import stroom.query.api.v2.ResultRequest;
 import stroom.query.api.v2.ResultRequest.Fetch;
@@ -33,6 +36,8 @@ import stroom.query.api.v2.SearchRequest;
 import stroom.query.api.v2.Sort;
 import stroom.query.api.v2.Sort.SortDirection;
 import stroom.query.api.v2.TableSettings;
+import stroom.query.api.v2.Window;
+import stroom.query.common.v2.CompiledWindow;
 import stroom.query.common.v2.DateExpressionParser;
 import stroom.query.common.v2.DateExpressionParser.DatePoint;
 import stroom.query.language.functions.Expression;
@@ -41,6 +46,7 @@ import stroom.query.language.functions.ExpressionParser;
 import stroom.query.language.functions.FieldIndex;
 import stroom.query.language.functions.ParamFactory;
 import stroom.query.language.token.AbstractToken;
+import stroom.query.language.token.FunctionGroup;
 import stroom.query.language.token.KeywordGroup;
 import stroom.query.language.token.StructureBuilder;
 import stroom.query.language.token.Token;
@@ -48,6 +54,7 @@ import stroom.query.language.token.TokenException;
 import stroom.query.language.token.TokenGroup;
 import stroom.query.language.token.TokenType;
 import stroom.query.language.token.Tokeniser;
+import stroom.util.NullSafe;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 
@@ -63,8 +70,11 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 public class SearchRequestFactory {
@@ -107,22 +117,27 @@ public class SearchRequestFactory {
 
         private ExpressionContext expressionContext;
         private final FieldIndex fieldIndex;
+        private Map<String, String> paramMap;
         private final Map<String, Expression> expressionMap;
         private final Set<String> addedFields = new HashSet<>();
         private final List<AbstractToken> additionalFields = new ArrayList<>();
         private boolean inHaving;
+        private Optional<CompiledWindow> optionalCompiledWindow = Optional.empty();
 
         Builder(final VisualisationTokenConsumer visualisationTokenConsumer,
                 final DocResolver docResolver) {
             this.visualisationTokenConsumer = visualisationTokenConsumer;
             this.docResolver = docResolver;
             this.fieldIndex = new FieldIndex();
+            this.paramMap = Collections.emptyMap();
             this.expressionMap = new HashMap<>();
         }
 
         void extractDataSourceOnly(final String string, final Consumer<DocRef> consumer) {
             // Get a list of tokens.
             final List<Token> tokens = Tokeniser.parse(string);
+
+
             if (tokens.isEmpty()) {
                 throw new TokenException(null, "No tokens");
             }
@@ -162,6 +177,7 @@ public class SearchRequestFactory {
 
                 final Query.Builder queryBuilder = Query.builder();
                 if (in.getQuery() != null) {
+                    paramMap = ParamUtil.createParamMap(in.getQuery().getParams());
                     queryBuilder.params(in.getQuery().getParams());
                     queryBuilder.timeRange(in.getQuery().getTimeRange());
                 }
@@ -211,7 +227,7 @@ public class SearchRequestFactory {
         private List<AbstractToken> addDataSource(final List<AbstractToken> tokens,
                                                   final Consumer<DocRef> consumer,
                                                   final boolean isLenient) {
-            AbstractToken token = tokens.get(0);
+            AbstractToken token = tokens.getFirst();
 
             // The first token must be `FROM`.
             if (!TokenType.FROM.equals(token.getTokenType())) {
@@ -258,11 +274,9 @@ public class SearchRequestFactory {
                         localConsumedTokens.add(tokenType);
                         consumedTokens.add(tokenType);
                         allowFollowing.add(tokenType);
-                        allowFollowing.addAll(Set.of(TokenType.AND, TokenType.OR, TokenType.NOT));
+                        allowFollowing.addAll(TokenType.ALL_LOGICAL_OPERATORS);
                         whereGroup.add(keywordGroup);
-                    } else if (TokenType.AND.equals(tokenType) ||
-                            TokenType.OR.equals(tokenType) ||
-                            TokenType.NOT.equals(tokenType)) {
+                    } else if (TokenType.ALL_LOGICAL_OPERATORS.contains(tokenType)) {
                         // Check we have already consumed the expected keyword token.
                         checkTokenOrder(token, localConsumedTokens, Set.of(TokenType.FROM, keyword), allowFollowing);
                         localConsumedTokens.add(tokenType);
@@ -277,7 +291,9 @@ public class SearchRequestFactory {
 
             if (!whereGroup.isEmpty()) {
                 final ExpressionOperator expressionOperator = processLogic(whereGroup);
-                expressionConsumer.accept(expressionOperator);
+                // Simplify expression.
+                final ExpressionOperator simplifiedExpression = ExpressionUtil.simplify(expressionOperator);
+                expressionConsumer.accept(simplifiedExpression);
             } else {
                 expressionConsumer.accept(ExpressionOperator.builder().build());
             }
@@ -288,11 +304,15 @@ public class SearchRequestFactory {
             return Collections.emptyList();
         }
 
-        private void addTerm(
-                final List<AbstractToken> tokens,
-                final ExpressionOperator.Builder parentBuilder) {
-            if (tokens.size() < 3) {
-                throw new TokenException(tokens.get(0), "Incomplete term");
+
+        private ExpressionTerm createTerm(
+                final List<AbstractToken> tokens) {
+            ExpressionTerm expressionTerm;
+
+            if (NullSafe.isEmptyCollection(tokens)) {
+                throw new RuntimeException("createTerm called with empty list");
+            } else if (tokens.size() < 3) {
+                throw new TokenException(tokens.getFirst(), "Incomplete term");
             }
 
             final AbstractToken fieldToken = tokens.get(0);
@@ -301,12 +321,12 @@ public class SearchRequestFactory {
             if (!TokenType.isString(fieldToken) && !TokenType.PARAM.equals(fieldToken.getTokenType())) {
                 throw new TokenException(fieldToken, "Expected field string");
             }
-            if (!TokenType.CONDITIONS.contains(conditionToken.getTokenType())) {
+            if (!TokenType.ALL_CONDITIONS.contains(conditionToken.getTokenType())) {
                 throw new TokenException(conditionToken, "Expected condition token");
             }
 
             if (TokenType.IN.equals(conditionToken.getTokenType())) {
-                addInTerm(tokens, parentBuilder);
+                expressionTerm = createInTerm(tokens);
 
             } else {
                 final String field = fieldToken.getUnescapedText();
@@ -315,7 +335,7 @@ public class SearchRequestFactory {
 
                 if (TokenType.BETWEEN.equals(conditionToken.getTokenType())) {
                     if (tokens.size() == end) {
-                        throw new TokenException(tokens.get(tokens.size() - 1), "Expected between and");
+                        throw new TokenException(tokens.getLast(), "Expected between and");
                     }
 
                     final AbstractToken betweenAnd = tokens.get(end);
@@ -346,13 +366,12 @@ public class SearchRequestFactory {
                     default -> throw new TokenException(conditionToken, "Unknown condition: " + conditionToken);
                 }
 
-                final ExpressionTerm expressionTerm = ExpressionTerm
+                expressionTerm = ExpressionTerm
                         .builder()
                         .field(field)
                         .condition(cond)
                         .value(value.toString().trim())
                         .build();
-                parentBuilder.addTerm(expressionTerm);
             }
 
             if (inHaving) {
@@ -366,11 +385,14 @@ public class SearchRequestFactory {
                     }
                 }
             }
+
+            return expressionTerm;
         }
 
-        private void addInTerm(
-                final List<AbstractToken> tokens,
-                final ExpressionOperator.Builder parentBuilder) {
+        private ExpressionTerm createInTerm(
+                final List<AbstractToken> tokens) {
+            ExpressionTerm expressionTerm;
+
             final AbstractToken fieldToken = tokens.get(0);
             final AbstractToken conditionToken = tokens.get(1);
             final AbstractToken valueToken = tokens.get(2);
@@ -401,13 +423,12 @@ public class SearchRequestFactory {
                     throw new TokenException(dictionaryNameToken, e.getMessage());
                 }
 
-                final ExpressionTerm expressionTerm = ExpressionTerm
+                expressionTerm = ExpressionTerm
                         .builder()
                         .field(field)
                         .condition(Condition.IN_DICTIONARY)
                         .docRef(dictionaryRef)
                         .build();
-                parentBuilder.addTerm(expressionTerm);
 
             } else if (valueToken instanceof final TokenGroup tokenGroup) {
                 if (tokens.size() > 3) {
@@ -448,17 +469,18 @@ public class SearchRequestFactory {
                 }
 
                 final String field = fieldToken.getUnescapedText();
-                final ExpressionTerm expressionTerm = ExpressionTerm
+                expressionTerm = ExpressionTerm
                         .builder()
                         .field(field)
                         .condition(Condition.IN)
                         .value(sb.toString())
                         .build();
-                parentBuilder.addTerm(expressionTerm);
 
             } else {
                 throw new TokenException(valueToken, "Expected parentheses after IN clause");
             }
+
+            return expressionTerm;
         }
 
         private int addValue(final List<AbstractToken> tokens,
@@ -467,12 +489,18 @@ public class SearchRequestFactory {
             for (int i = start; i < tokens.size(); i++) {
                 final AbstractToken token = tokens.get(i);
                 if (TokenType.BETWEEN_AND.equals(token.getTokenType())) {
-                    value.append(parseValueTokens(tokens.subList(start, i)));
+                    final String val = parseValueTokens(tokens.subList(start, i));
+                    if (val != null) {
+                        value.append(val);
+                    }
                     return i;
                 }
             }
 
-            value.append(parseValueTokens(tokens.subList(start, tokens.size())));
+            final String val = parseValueTokens(tokens.subList(start, tokens.size()));
+            if (val != null) {
+                value.append(val);
+            }
             return tokens.size();
         }
 
@@ -486,18 +514,24 @@ public class SearchRequestFactory {
             final StringBuilder sb = new StringBuilder();
             for (final AbstractToken token : tokens) {
                 if (TokenType.FUNCTION_GROUP.equals(token.getTokenType())) {
+                    final FunctionGroup functionGroup = (FunctionGroup) token;
                     DatePoint foundFunction = null;
-                    final String function = token.getUnescapedText();
-                    for (final DatePoint datePoint : DatePoint.values()) {
-                        if (datePoint.getFunction().equals(function)) {
-                            foundFunction = datePoint;
-                            break;
-                        }
-                    }
-                    if (foundFunction == null) {
-                        throw new TokenException(token, "Unexpected function in value");
+                    if (functionGroup.getName().equalsIgnoreCase("param")) {
+                        return resolveParam(functionGroup);
+
                     } else {
-                        dateExpression = true;
+                        final String function = token.getUnescapedText();
+                        for (final DatePoint datePoint : DatePoint.values()) {
+                            if (datePoint.getFunction().equals(function)) {
+                                foundFunction = datePoint;
+                                break;
+                            }
+                        }
+                        if (foundFunction == null) {
+                            throw new TokenException(token, "Unexpected function in value");
+                        } else {
+                            dateExpression = true;
+                        }
                     }
                 } else if (TokenType.DURATION.equals(token.getTokenType())) {
                     dateExpression = true;
@@ -538,116 +572,151 @@ public class SearchRequestFactory {
             return expression;
         }
 
+        private String resolveParam(final FunctionGroup functionGroup) {
+            if (functionGroup.getChildren().isEmpty()) {
+                throw new TokenException(functionGroup, "Expected param name");
+            } else if (functionGroup.getChildren().size() > 1) {
+                throw new TokenException(functionGroup.getChildren().get(1), "Unexpected token");
+            } else {
+                final AbstractToken child = functionGroup.getChildren().getFirst();
+                if (!TokenType.STRING.equals(child.getTokenType())) {
+                    throw new TokenException(child, "Expected param name");
+                }
+                return paramMap.get(child.getUnescapedText());
+            }
+        }
+
         private ExpressionOperator processLogic(final List<AbstractToken> tokens) {
-            ExpressionOperator.Builder builder = ExpressionOperator.builder().op(Op.AND);
+            // Replace all term tokens with expression items.
+            List<Object> out = gatherTerms(tokens);
+
+            // Apply NOT operators.
+            out = applyNotOperators(out);
+
+            // Apply AND operators.
+            out = applyAndOrOperators(out, TokenType.AND, Op.AND);
+
+            // Apply OR operators.
+            out = applyAndOrOperators(out, TokenType.OR, Op.OR);
+
+            // Gather final expression items.
+            final List<ExpressionItem> list = new ArrayList<>(out.size());
+            for (final Object object : out) {
+                if (object instanceof final ExpressionItem expressionItem) {
+                    list.add(expressionItem);
+                } else if (object instanceof final AbstractToken token) {
+                    throw new TokenException(token, "Unexpected token");
+                }
+            }
+
+            if (list.size() == 1 && list.getFirst() instanceof final ExpressionOperator expressionOperator) {
+                return expressionOperator;
+            }
+
+            return ExpressionOperator
+                    .builder()
+                    .op(Op.AND)
+                    .children(list)
+                    .build();
+        }
+
+        private List<Object> gatherTerms(final List<AbstractToken> tokens) {
+            final List<Object> out = new ArrayList<>(tokens.size());
+
+            // Gather terms.
             final List<AbstractToken> termTokens = new ArrayList<>();
-
-            int i = 0;
-            AbstractToken lastToken = null;
-            for (; i < tokens.size(); i++) {
-                final AbstractToken token = tokens.get(i);
-                final TokenType tokenType = token.getTokenType();
-
-                final boolean logic =
-                        TokenType.AND.equals(tokenType) ||
-                                TokenType.OR.equals(tokenType) ||
-                                TokenType.NOT.equals(tokenType);
-
-                if (lastToken != null && TokenType.IN.equals(lastToken.getTokenType())) {
-                    // Treat token following IN as part of term.
-                    termTokens.add(token);
-
-                } else if (!(token instanceof KeywordGroup) &&
-                        !(token instanceof TokenGroup) &&
-                        !logic) {
-
-                    // Treat token as part of a term.
-                    termTokens.add(token);
-                } else {
-                    // Add current term.
+            for (final AbstractToken token : tokens) {
+                if (termTokens.isEmpty() && token instanceof final KeywordGroup keywordGroup) {
+                    out.add(processLogic(keywordGroup.getChildren()));
+                } else if (termTokens.isEmpty() && token instanceof final TokenGroup tokenGroup) {
+                    out.add(processLogic(tokenGroup.getChildren()));
+                } else if (TokenType.AND.equals(token.getTokenType()) ||
+                        TokenType.OR.equals(token.getTokenType()) ||
+                        TokenType.NOT.equals(token.getTokenType())) {
                     if (!termTokens.isEmpty()) {
-                        addTerm(termTokens, builder);
+                        out.add(createTerm(termTokens));
                         termTokens.clear();
                     }
-
-                    if (token instanceof final KeywordGroup keywordGroup) {
-                        switch (tokenType) {
-                            case WHERE, HAVING, FILTER, AND -> builder = addAnd(builder, keywordGroup.getChildren());
-                            case OR -> builder = addOr(builder, keywordGroup.getChildren());
-                            case NOT -> builder = addNot(builder, keywordGroup.getChildren());
-                            default -> throw new TokenException(token, "Unexpected pipe operation in query");
-                        }
-
-                    } else if (token instanceof final TokenGroup tokenGroup) {
-                        builder = addAnd(builder, tokenGroup.getChildren());
-
-                    } else if (logic) {
-                        final List<AbstractToken> remaining = tokens.subList(i + 1, tokens.size());
-                        i = tokens.size();
-
-                        switch (tokenType) {
-                            case AND -> builder = addAnd(builder, remaining);
-                            case OR -> builder = addOr(builder, remaining);
-                            case NOT -> builder = addNot(builder, remaining);
-                            default -> throw new TokenException(token, "Unexpected token");
-                        }
-                    }
+                    out.add(token);
+                } else {
+                    termTokens.add(token);
                 }
-
-                lastToken = token;
             }
-
-            // Add remaining term.
             if (!termTokens.isEmpty()) {
-                addTerm(termTokens, builder);
-                termTokens.clear();
+                out.add(createTerm(termTokens));
             }
 
-            return builder.build();
+            return out;
         }
 
-        private ExpressionOperator.Builder addAnd(final ExpressionOperator.Builder builder,
-                                                  final List<AbstractToken> tokens) {
-            ExpressionOperator.Builder nextBuilder = builder;
-            final ExpressionOperator childOperator = processLogic(tokens);
-            if (childOperator.hasChildren()) {
-                nextBuilder = ExpressionOperator.builder().op(Op.AND);
-                final ExpressionOperator current = builder.build();
-                if (current.hasChildren()) {
-                    nextBuilder.addOperator(current);
+        private List<Object> applyNotOperators(final List<Object> in) {
+            final List<Object> out = new ArrayList<>(in.size());
+            for (int i = 0; i < in.size(); i++) {
+                final Object object = in.get(i);
+                if (object instanceof final AbstractToken token && TokenType.NOT.equals(token.getTokenType())) {
+                    // Get next token.
+                    i++;
+                    if (i < in.size()) {
+                        final Object next = in.get(i);
+                        if (next instanceof final ExpressionItem expressionItem) {
+                            final ExpressionOperator not = ExpressionOperator
+                                    .builder()
+                                    .op(Op.NOT)
+                                    .children(List.of(expressionItem))
+                                    .build();
+                            out.add(not);
+                        } else {
+                            throw new TokenException(token, "Expected term after NOT");
+                        }
+                    } else {
+                        throw new TokenException(token, "Trailing NOT");
+                    }
+
+                } else {
+                    out.add(object);
                 }
-                nextBuilder.addOperator(childOperator);
             }
-            return nextBuilder;
+            return out;
         }
 
-        private ExpressionOperator.Builder addOr(final ExpressionOperator.Builder builder,
-                                                 final List<AbstractToken> tokens) {
-            ExpressionOperator.Builder nextBuilder = builder;
-            final ExpressionOperator childOperator = processLogic(tokens);
-            if (childOperator.hasChildren()) {
-                nextBuilder = ExpressionOperator.builder().op(Op.OR);
-                final ExpressionOperator current = builder.build();
-                if (current.hasChildren()) {
-                    nextBuilder.addOperator(current);
+        private List<Object> applyAndOrOperators(final List<Object> in, final TokenType tokenType, final Op op) {
+            final List<Object> out = new ArrayList<>(in.size());
+            Object previous = null;
+            for (int i = 0; i < in.size(); i++) {
+                final Object object = in.get(i);
+                if (object instanceof final AbstractToken token && tokenType.equals(token.getTokenType())) {
+                    if (previous instanceof final ExpressionItem previousExpressionItem) {
+                        // Get next token.
+                        i++;
+                        if (i < in.size()) {
+                            final Object next = in.get(i);
+                            if (next instanceof final ExpressionItem expressionItem) {
+                                previous = ExpressionOperator
+                                        .builder()
+                                        .op(op)
+                                        .children(List.of(previousExpressionItem, expressionItem))
+                                        .build();
+                            } else {
+                                throw new TokenException(token, "Expected term after " + tokenType.name());
+                            }
+                        } else {
+                            throw new TokenException(token, "Trailing " + tokenType.name());
+                        }
+
+                    } else {
+                        throw new TokenException(token, "Expected term before " + tokenType.name());
+                    }
+                } else {
+                    if (previous != null) {
+                        out.add(previous);
+                    }
+                    previous = object;
                 }
-                nextBuilder.addOperator(childOperator);
             }
-            return nextBuilder;
-        }
-
-        private ExpressionOperator.Builder addNot(final ExpressionOperator.Builder builder,
-                                                  final List<AbstractToken> tokens) {
-            final ExpressionOperator childOperator = processLogic(tokens);
-            if (childOperator.hasChildren()) {
-                final ExpressionOperator not = ExpressionOperator
-                        .builder()
-                        .op(Op.NOT)
-                        .addOperator(childOperator)
-                        .build();
-                builder.addOperator(not);
+            if (previous != null) {
+                out.add(previous);
             }
-            return builder;
+            return out;
         }
 
         private void addTableSettings(final List<AbstractToken> tokens,
@@ -656,7 +725,7 @@ public class SearchRequestFactory {
                                       final Query.Builder queryBuilder) {
             final Map<String, Sort> sortMap = new HashMap<>();
             final Map<String, Integer> groupMap = new HashMap<>();
-            final Map<String, Filter> filterMap = new HashMap<>();
+            final Map<String, IncludeExcludeFilter> filterMap = new HashMap<>();
             int groupDepth = 0;
 
             final TableSettings.Builder tableSettingsBuilder = TableSettings.builder();
@@ -664,22 +733,16 @@ public class SearchRequestFactory {
 
             List<AbstractToken> remaining = new LinkedList<>(tokens);
             while (!remaining.isEmpty()) {
-                final AbstractToken token = remaining.get(0);
+                final AbstractToken token = remaining.getFirst();
 
                 if (token instanceof final KeywordGroup keywordGroup) {
                     switch (keywordGroup.getTokenType()) {
                         case FROM -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(),
-                                    Set.of());
+                            checkTokenOrder(token, consumedTokens);
                             remaining = addDataSource(remaining, queryBuilder::dataSource, false);
                         }
                         case WHERE -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    Set.of(TokenType.FROM));
+                            checkTokenOrder(token, consumedTokens);
                             remaining =
                                     addExpression(remaining,
                                             consumedTokens,
@@ -688,28 +751,19 @@ public class SearchRequestFactory {
                                             queryBuilder::expression);
                         }
                         case EVAL -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    Set.of(TokenType.FROM, TokenType.WHERE, TokenType.EVAL));
+                            checkTokenOrder(token, consumedTokens);
                             processEval(keywordGroup);
-                            remaining.remove(0);
+                            remaining.removeFirst();
                         }
                         case WINDOW -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    Set.of(TokenType.FROM, TokenType.WHERE, TokenType.EVAL));
+                            checkTokenOrder(token, consumedTokens);
                             processWindow(
                                     keywordGroup,
                                     tableSettingsBuilder);
-                            remaining.remove(0);
+                            remaining.removeFirst();
                         }
                         case FILTER -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    Set.of(TokenType.FROM, TokenType.WHERE, TokenType.EVAL, TokenType.WINDOW));
+                            checkTokenOrder(token, consumedTokens);
                             remaining =
                                     addExpression(remaining,
                                             consumedTokens,
@@ -722,41 +776,24 @@ public class SearchRequestFactory {
                                             tableSettingsBuilder::valueFilter);
                         }
                         case SORT -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    inverse(Set.of(
-                                            TokenType.LIMIT,
-                                            TokenType.SELECT,
-                                            TokenType.HAVING,
-                                            TokenType.SHOW)));
+                            checkTokenOrder(token, consumedTokens);
                             processSortBy(
                                     keywordGroup,
                                     sortMap);
-                            remaining.remove(0);
+                            remaining.removeFirst();
                         }
                         case GROUP -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    inverse(Set.of(
-                                            TokenType.LIMIT,
-                                            TokenType.SELECT,
-                                            TokenType.HAVING,
-                                            TokenType.SHOW)));
+                            checkTokenOrder(token, consumedTokens);
                             processGroupBy(
                                     keywordGroup,
                                     groupMap,
                                     groupDepth);
                             groupDepth++;
-                            remaining.remove(0);
+                            remaining.removeFirst();
                         }
                         case HAVING -> {
                             inHaving = true;
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    inverse(Set.of(TokenType.LIMIT, TokenType.SELECT, TokenType.SHOW)));
+                            checkTokenOrder(token, consumedTokens);
                             remaining =
                                     addExpression(remaining,
                                             consumedTokens,
@@ -766,37 +803,28 @@ public class SearchRequestFactory {
                             inHaving = false;
                         }
                         case SELECT -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    inverse(Set.of(TokenType.SELECT, TokenType.SHOW)));
+                            checkTokenOrder(token, consumedTokens);
                             processSelect(
                                     keywordGroup,
                                     sortMap,
                                     groupMap,
                                     filterMap,
                                     tableSettingsBuilder);
-                            remaining.remove(0);
+                            remaining.removeFirst();
                         }
                         case LIMIT -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    inverse(Set.of(TokenType.SELECT, TokenType.SHOW)));
+                            checkTokenOrder(token, consumedTokens);
                             processLimit(
                                     keywordGroup,
                                     tableSettingsBuilder);
-                            remaining.remove(0);
+                            remaining.removeFirst();
                         }
                         case SHOW -> {
-                            checkTokenOrder(token,
-                                    consumedTokens,
-                                    Set.of(TokenType.FROM),
-                                    inverse(Set.of(TokenType.SHOW)));
+                            checkTokenOrder(token, consumedTokens);
                             final TableSettings parentTableSettings = tableSettingsBuilder.build();
                             visTableSettings = visualisationTokenConsumer
                                     .processVis(keywordGroup, parentTableSettings);
-                            remaining.remove(0);
+                            remaining.removeFirst();
                         }
                         default -> throw new TokenException(token, "Unexpected token");
                     }
@@ -822,7 +850,7 @@ public class SearchRequestFactory {
                 final String fieldName = token.getUnescapedText();
                 if (!addedFields.contains(fieldName)) {
                     final String id = "__" + fieldName.replaceAll("\\s", "_") + "__";
-                    addField(token,
+                    tableSettingsBuilder.addColumns(createColumn(token,
                             id,
                             fieldName,
                             fieldName,
@@ -830,8 +858,7 @@ public class SearchRequestFactory {
                             true,
                             sortMap,
                             groupMap,
-                            filterMap,
-                            tableSettingsBuilder);
+                            filterMap));
                 }
             }
 
@@ -876,76 +903,93 @@ public class SearchRequestFactory {
 
         private void processWindow(final KeywordGroup keywordGroup,
                                    final TableSettings.Builder builder) {
-            final List<AbstractToken> children = keywordGroup.getChildren();
+            final List<AbstractToken> children = new ArrayList<>(keywordGroup.getChildren());
 
-            String field;
-            String durationString;
-            String advanceString = null;
+            final HoppingWindow.Builder hoppingWindowBuilder = HoppingWindow.builder();
 
             // Get field name.
             if (!children.isEmpty()) {
-                final AbstractToken token = children.get(0);
+                final AbstractToken token = children.getFirst();
                 if (!TokenType.isString(token)) {
                     throw new TokenException(token, "Syntax exception");
                 }
-                field = token.getUnescapedText();
+                final String field = token.getUnescapedText();
+                hoppingWindowBuilder.timeField(field);
+                children.removeFirst();
             } else {
                 throw new TokenException(keywordGroup, "Expected field");
             }
 
-            // Get BY.
-            if (children.size() > 1) {
-                final AbstractToken token = children.get(1);
-                if (!TokenType.BY.equals(token.getTokenType())) {
-                    throw new TokenException(token, "Syntax exception, expected by");
-                }
-            } else {
+            // Get `by` and duration.
+            final int byIndex = getTokenIndex(children, token -> TokenType.BY.equals(token.getTokenType()));
+            if (byIndex == -1) {
                 throw new TokenException(keywordGroup, "Syntax exception, expected by");
-            }
-
-            // Get duration.
-            if (children.size() > 2) {
-                final AbstractToken token = children.get(2);
+            } else if (children.size() > byIndex + 1) {
+                final AbstractToken token = children.get(byIndex + 1);
                 if (!TokenType.DURATION.equals(token.getTokenType())) {
                     throw new TokenException(token, "Syntax exception, expected valid window duration");
                 }
-                durationString = token.getUnescapedText();
+                final String durationString = token.getUnescapedText();
+                hoppingWindowBuilder.windowSize(durationString);
+                hoppingWindowBuilder.advanceSize(durationString);
+
+                // We found the duration so remove the tokens.
+                children.remove(byIndex + 1);
+                children.remove(byIndex);
             } else {
-                throw new TokenException(keywordGroup, "Syntax exception, expected window duration");
+                throw new TokenException(children.get(byIndex), "Syntax exception, expected window duration");
             }
 
-            // Get advance.
-            if (children.size() > 3) {
-                final AbstractToken token = children.get(3);
-                if (!TokenType.isString(token) || !token.getUnescapedText().equals("advance")) {
-                    throw new TokenException(token, "Syntax exception, expected advance");
-                }
-            }
-
-            // If advance then get advance duration.
-            if (children.size() > 3) {
-                if (children.size() > 4) {
-                    final AbstractToken token = children.get(4);
+            // Get `advance` and duration.
+            final int advanceIndex = getTokenIndex(children, token -> TokenType.isString(token) &&
+                    token.getUnescapedText().equalsIgnoreCase("advance"));
+            if (advanceIndex != -1) {
+                if (children.size() > advanceIndex + 1) {
+                    final AbstractToken token = children.get(advanceIndex + 1);
                     if (!TokenType.DURATION.equals(token.getTokenType())) {
                         throw new TokenException(token, "Syntax exception, expected valid advance duration");
                     }
-                    advanceString = token.getUnescapedText();
+                    final String advanceString = token.getUnescapedText();
+                    hoppingWindowBuilder.advanceSize(advanceString);
+
+                    // We found the duration so remove the tokens.
+                    children.remove(advanceIndex + 1);
+                    children.remove(advanceIndex);
                 } else {
-                    throw new TokenException(keywordGroup, "Syntax exception, expected advance duration");
+                    throw new TokenException(children.get(advanceIndex), "Syntax exception, expected advance duration");
                 }
             }
 
-            if (children.size() > 5) {
-                throw new TokenException(children.get(5), "Unexpected token");
+            // Get `using` and function.
+            final int usingIndex = getTokenIndex(children, token -> TokenType.isString(token) &&
+                    token.getUnescapedText().equalsIgnoreCase("using"));
+            if (usingIndex != -1) {
+                if (children.size() > usingIndex + 1) {
+                    final AbstractToken token = children.get(usingIndex + 1);
+//                    if (!TokenType.FUNCTION_GROUP.equals(token.getTokenType())) {
+//                        throw new TokenException(token, "Syntax exception, expected valid using function");
+//                    }
+                    final String function = token.getUnescapedText();
+                    hoppingWindowBuilder.function(function);
+
+                    // We found the duration so remove the tokens.
+                    children.remove(usingIndex + 1);
+                    children.remove(usingIndex);
+                } else {
+                    throw new TokenException(children.get(usingIndex), "Syntax exception, expected using function");
+                }
             }
 
-            builder.window(HoppingWindow.builder()
-                    .timeField(field)
-                    .windowSize(durationString)
-                    .advanceSize(advanceString == null
-                            ? durationString
-                            : advanceString)
-                    .build());
+            if (!children.isEmpty()) {
+                throw new TokenException(children.getFirst(), "Unexpected token");
+            }
+
+            final Window window = hoppingWindowBuilder.build();
+            final CompiledWindow compiledWindow = CompiledWindow.create(window);
+            // Add time window fields so they can be used by other expressions.
+            compiledWindow.addWindowFields(expressionContext, fieldIndex, expressionMap);
+            optionalCompiledWindow = Optional.of(compiledWindow);
+            builder.window(window);
         }
 
         private void processEval(final KeywordGroup keywordGroup) {
@@ -955,7 +999,7 @@ public class SearchRequestFactory {
             if (children.isEmpty()) {
                 throw new TokenException(keywordGroup, "Expected variable name following eval");
             }
-            final AbstractToken variableToken = children.get(0);
+            final AbstractToken variableToken = children.getFirst();
             if (!TokenType.isString(variableToken)) {
                 throw new TokenException(variableToken, "Expected variable name");
             }
@@ -989,96 +1033,151 @@ public class SearchRequestFactory {
         private void processSelect(final KeywordGroup keywordGroup,
                                    final Map<String, Sort> sortMap,
                                    final Map<String, Integer> groupMap,
-                                   final Map<String, Filter> filterMap,
+                                   final Map<String, IncludeExcludeFilter> filterMap,
                                    final TableSettings.Builder tableSettingsBuilder) {
             final List<AbstractToken> children = keywordGroup.getChildren();
             AbstractToken fieldToken = null;
+            Expression fieldExpression = null;
             String columnName = null;
             boolean afterAs = false;
+            boolean doneAs = false;
+            final Map<String, AtomicInteger> columnCount = new HashMap<>();
+            final List<Column> columns = new ArrayList<>();
 
             for (final AbstractToken token : children) {
-                if (TokenType.isString(token)) {
+
+                if (TokenType.FUNCTION_GROUP.equals(token.getTokenType())) {
+                    // If a function has been used for a column then parse it.
+                    if (fieldExpression != null || fieldToken != null) {
+                        throw new TokenException(token, "Unexpected expression");
+                    }
+
+                    final FunctionGroup functionGroup = (FunctionGroup) token;
+                    columnName = functionGroup.getText();
+                    final ExpressionParser expressionParser = new ExpressionParser(new ParamFactory(expressionMap));
+                    try {
+                        fieldExpression = expressionParser
+                                .parse(expressionContext, fieldIndex, Collections.singletonList(token));
+                    } catch (final ParseException e) {
+                        throw new TokenException(keywordGroup, e.getMessage());
+                    }
+
+                } else if (TokenType.isString(token)) {
+                    // If we have a string then it is either a field name or a column name if provided after AS.
                     if (afterAs) {
-                        if (columnName != null) {
+                        if (doneAs) {
                             throw new TokenException(token, "Syntax exception, unexpected column name");
                         } else {
                             columnName = token.getUnescapedText();
+                            doneAs = true;
                         }
                     } else if (fieldToken == null) {
+                        if (fieldExpression != null) {
+                            throw new TokenException(token, "Unexpected field");
+                        }
+
                         fieldToken = token;
+                        columnName = token.getUnescapedText();
                     } else {
                         throw new TokenException(token, "Syntax exception, expected AS");
                     }
+
                 } else if (TokenType.AS.equals(token.getTokenType())) {
-                    if (fieldToken == null) {
-                        throw new TokenException(token, "Syntax exception, expected field name");
+                    // We found AS so prepare for a column name.
+                    if (fieldToken == null && fieldExpression == null) {
+                        throw new TokenException(token, "Syntax exception, expected field name or expression");
+                    }
+                    if (afterAs) {
+                        throw new TokenException(token, "Unexpected AS");
                     }
 
                     afterAs = true;
 
                 } else if (TokenType.COMMA.equals(token.getTokenType())) {
-                    if (fieldToken == null) {
+                    if (fieldToken != null) {
+                        final String columnId = createColumnId(columnCount, columnName);
+                        columns.add(createColumn(
+                                fieldToken,
+                                columnId,
+                                fieldToken.getUnescapedText(),
+                                columnName,
+                                true,
+                                false,
+                                sortMap,
+                                groupMap,
+                                filterMap));
+
+                    } else if (fieldExpression != null) {
+                        final String columnId = createColumnId(columnCount, columnName);
+                        columns.add(createColumn(
+                                columnId,
+                                fieldExpression,
+                                columnName,
+                                sortMap,
+                                groupMap,
+                                filterMap));
+                    } else {
                         throw new TokenException(token, "Syntax exception, expected field name");
                     }
 
-                    addField(fieldToken,
-                            fieldToken.getUnescapedText(),
-                            fieldToken.getUnescapedText(),
-                            columnName,
-                            sortMap,
-                            groupMap,
-                            filterMap,
-                            tableSettingsBuilder);
-
                     fieldToken = null;
+                    fieldExpression = null;
                     columnName = null;
                     afterAs = false;
+                    doneAs = false;
                 }
             }
 
             // Add final field if we have one.
             if (fieldToken != null) {
-                addField(fieldToken,
+                final String columnId = createColumnId(columnCount, columnName);
+                columns.add(createColumn(
+                        fieldToken,
+                        columnId,
                         fieldToken.getUnescapedText(),
-                        fieldToken.getUnescapedText(),
+                        columnName,
+                        true,
+                        false,
+                        sortMap,
+                        groupMap,
+                        filterMap));
+
+            } else if (fieldExpression != null) {
+                final String columnId = createColumnId(columnCount, columnName);
+                columns.add(createColumn(
+                        columnId,
+                        fieldExpression,
                         columnName,
                         sortMap,
                         groupMap,
-                        filterMap,
-                        tableSettingsBuilder);
+                        filterMap));
             }
+
+            // Modify columns if we have a time window.
+            final List<Column> modifiedColumns = optionalCompiledWindow.map(compiledWindow ->
+                    compiledWindow.addPeriodColumns(columns, expressionMap)).orElse(columns);
+            tableSettingsBuilder.addColumns(modifiedColumns);
         }
 
-        private void addField(final AbstractToken token,
-                              final String id,
-                              final String fieldName,
-                              final String columnName,
-                              final Map<String, Sort> sortMap,
-                              final Map<String, Integer> groupMap,
-                              final Map<String, Filter> filterMap,
-                              final TableSettings.Builder tableSettingsBuilder) {
-            addField(token,
-                    id,
-                    fieldName,
-                    columnName,
-                    true,
-                    false,
-                    sortMap,
-                    groupMap,
-                    filterMap,
-                    tableSettingsBuilder);
+        private String createColumnId(final Map<String, AtomicInteger> map, final String name) {
+            final String cleanName = name
+                    .trim()
+                    .toLowerCase(Locale.ROOT)
+                    .replaceAll("[^a-z0-9]", "_")
+                    .replaceAll("_+", "_");
+            final int id = map.computeIfAbsent(cleanName, k -> new AtomicInteger()).incrementAndGet();
+            return cleanName + "-" + id;
         }
 
-        private void addField(final AbstractToken token,
-                              final String id,
-                              final String fieldName,
-                              final String columnName,
-                              final boolean visible,
-                              final boolean special,
-                              final Map<String, Sort> sortMap,
-                              final Map<String, Integer> groupMap,
-                              final Map<String, Filter> filterMap,
-                              final TableSettings.Builder tableSettingsBuilder) {
+        private Column createColumn(final AbstractToken token,
+                                    final String id,
+                                    final String fieldName,
+                                    final String columnName,
+                                    final boolean visible,
+                                    final boolean special,
+                                    final Map<String, Sort> sortMap,
+                                    final Map<String, Integer> groupMap,
+                                    final Map<String, IncludeExcludeFilter> filterMap) {
             addedFields.add(fieldName);
             Expression expression = expressionMap.get(fieldName);
             if (expression == null) {
@@ -1094,11 +1193,9 @@ public class SearchRequestFactory {
             }
 
             final String expressionString = expression.toString();
-            final Column field = Column.builder()
+            return Column.builder()
                     .id(id)
-                    .name(columnName != null
-                            ? columnName
-                            : fieldName)
+                    .name(columnName)
                     .expression(expressionString)
                     .sort(sortMap.get(fieldName))
                     .group(groupMap.get(fieldName))
@@ -1106,7 +1203,26 @@ public class SearchRequestFactory {
                     .visible(visible)
                     .special(special)
                     .build();
-            tableSettingsBuilder.addColumns(field);
+        }
+
+        private Column createColumn(final String id,
+                                    final Expression expression,
+                                    final String columnName,
+                                    final Map<String, Sort> sortMap,
+                                    final Map<String, Integer> groupMap,
+                                    final Map<String, IncludeExcludeFilter> filterMap) {
+            addedFields.add(columnName);
+            final String expressionString = expression.toString();
+            return Column.builder()
+                    .id(id)
+                    .name(columnName)
+                    .expression(expressionString)
+                    .sort(sortMap.get(columnName))
+                    .group(groupMap.get(columnName))
+                    .filter(filterMap.get(columnName))
+                    .visible(true)
+                    .special(false)
+                    .build();
         }
 
         private void processLimit(final KeywordGroup keywordGroup,
@@ -1133,9 +1249,8 @@ public class SearchRequestFactory {
             final List<AbstractToken> children = keywordGroup.getChildren();
             boolean first = true;
             for (final AbstractToken t : children) {
-                if (first && TokenType.BY.equals(t.getTokenType())) {
-                    // Ignore
-                } else {
+                // Ignore BY
+                if (!(first && TokenType.BY.equals(t.getTokenType()))) {
                     if (TokenType.isString(t)) {
                         if (fieldName == null) {
                             fieldName = t.getUnescapedText();
@@ -1188,9 +1303,8 @@ public class SearchRequestFactory {
             final List<AbstractToken> children = keywordGroup.getChildren();
             boolean first = true;
             for (final AbstractToken t : children) {
-                if (first && TokenType.BY.equals(t.getTokenType())) {
-                    // Ignore
-                } else {
+                // Ignore BY
+                if (!(first && TokenType.BY.equals(t.getTokenType()))) {
                     if (TokenType.isString(t)) {
                         if (fieldName == null) {
                             fieldName = t.getUnescapedText();
@@ -1212,6 +1326,30 @@ public class SearchRequestFactory {
             }
             if (fieldName != null) {
                 groupMap.put(fieldName, groupDepth);
+            }
+        }
+
+        private void checkTokenOrder(final AbstractToken token,
+                                     final List<TokenType> consumedTokens) {
+
+            final TokenType tokenType = token.getTokenType();
+
+            final Set<TokenType> keywordsRequiredBefore = TokenType.getKeywordsRequiredBefore(tokenType);
+
+            for (final TokenType requiredType : keywordsRequiredBefore) {
+                if (!consumedTokens.contains(requiredType)) {
+                    throw new TokenException(token,
+                            "Required token " + requiredType + " before " + tokenType);
+                }
+            }
+
+            final Set<TokenType> keywordsValidBefore = TokenType.getKeywordsValidBefore(tokenType);
+
+            for (final TokenType consumedType : consumedTokens) {
+                if (!keywordsValidBefore.contains(consumedType)) {
+                    throw new TokenException(token,
+                            "Unexpected token " + tokenType + " after " + consumedType);
+                }
             }
         }
 
@@ -1238,5 +1376,15 @@ public class SearchRequestFactory {
             set.removeAll(tokenTypes);
             return set;
         }
+    }
+
+    private static int getTokenIndex(final List<AbstractToken> tokens, final Predicate<AbstractToken> predicate) {
+        for (int i = 0; i < tokens.size(); i++) {
+            final AbstractToken token = tokens.get(i);
+            if (predicate.test(token)) {
+                return i;
+            }
+        }
+        return -1;
     }
 }
